--- a/chat-widget.html
+++ b/chat-widget.html
@@ -739,574 +739,316 @@ box-shadow:0 20px 60px rgba(0,0,0,0.3);
 
 
 <script>
-
 (function(){
-
 'use strict';
 
-
-
 const openBtn = document.getElementById('openChat');
-
 const overlay = document.getElementById('chatOverlay');
-
 const closeBtn = document.getElementById('closeChat');
-
 const area = document.getElementById('area');
-
 const inp = document.getElementById('inp');
-
 const btn = document.getElementById('btn');
-
 const quick = document.getElementById('quickActions');
-
 const timerContainer = document.getElementById('timerContainer');
-
 const timerDisplay = document.getElementById('timerDisplay');
-
-
 
 const WORKER_URL = 'https://kawkab.kawkab-arabia.workers.dev/';
 
-
-
 let historyMessages = [], chatOpened = false, finalized = false;
-
 let timerInterval = null;
-
 let timeRemaining = 60;
-
 let timerStarted = false;
-
 let lastDiscountPercent = null; // متغير لحفظ آخر نسبة خصم تم ذكرها
 
-
-
 function postToParent(action){
-
-try{
-
-if(window.parent && window.parent !== window){
-
-window.parent.postMessage({action}, '*');
-
+  try{
+    if(window.parent && window.parent !== window){
+      window.parent.postMessage({action}, '*');
+    }
+  }catch(e){}
 }
-
-}catch(e){}
-
-}
-
-
 
 function safeText(s){
-
-const d = document.createElement('div');
-
-d.textContent = s;
-
-return d.innerHTML;
-
+  const d = document.createElement('div');
+  d.textContent = s;
+  return d.innerHTML;
 }
-
-
 
 function scrollToBottom(){
-
-requestAnimationFrame(()=>{
-
-area.scrollTop = area.scrollHeight;
-
-});
-
+  requestAnimationFrame(()=>{
+    area.scrollTop = area.scrollHeight;
+  });
 }
 
-
-
-// وظيفة لاستخلاص نسبة الخصم من رسالة البوت
-
+// تحسين استخراج نسبة الخصم: يتعامل مع % و٪ وبحالات متعددة، يأخذ آخر قيمة موجودة
 function extractDiscount(text){
-
-// يبحث عن نمط: عرض: رقم%
-
-const match = text.match(/عرض:\s*(\d+)%/);
-
-if(match && match[1]){
-
-return parseInt(match[1], 10);
-
+  if(!text) return null;
+  // توحيد علامة النسبة العربية
+  text = String(text).replace(/٪/g, '%');
+  // نمط يقبض "عرض: 20%" أو "خصم 20%" أو حتى "20%"
+  const re = /(?:عرض|خصم)?\s*[:\-]?\s*(\d{1,3}(?:\.\d+)?)\s*%/gi;
+  let match = null;
+  let last = null;
+  while((match = re.exec(text)) !== null){
+    last = parseFloat(match[1]);
+  }
+  if(last === null) return null;
+  // قرّب للعدد الصحيح لأن نسب صغيرة عشوائية مش مهمة هنا
+  return Math.round(last);
 }
 
-// يمكن إضافة أنماط أخرى هنا إن لزم الأمر (مثل "خصم X%")
-
-const match2 = text.match(/خصم\s*(\d+)%/);
-
-if(match2 && match2[1]){
-
-return parseInt(match2[1], 10);
-
+// لو lastDiscountPercent فاضي، نبحث في historyMessages (الأحدث للأقدم) عن آخر خصم
+function findLastDiscountInHistory(){
+  for(let i = historyMessages.length - 1; i >= 0; i--){
+    const msg = historyMessages[i];
+    if(msg.role === 'assistant' && msg.content){
+      const d = extractDiscount(msg.content);
+      if(d !== null) return d;
+    }
+  }
+  // كمان نحاول نفحص رسائل الـ DOM (لو التاريخ مش محدث لسبب ما)
+  const botMsgs = Array.from(area.querySelectorAll('.msg.bot .bubble')).reverse();
+  for(const el of botMsgs){
+    const txt = el.innerText || el.textContent || '';
+    const d = extractDiscount(txt);
+    if(d !== null) return d;
+  }
+  return null;
 }
-
-return null;
-
-}
-
-
 
 function append(who, text, isResult = false){
+  const w = document.createElement('div');
+  w.className = 'msg ' + (who === 'user' ? 'user' : 'bot');
+  const b = document.createElement('div');
+  b.className = isResult ? 'result-msg' : 'bubble';
 
-const w = document.createElement('div');
+  if(who === 'bot' && !isResult){
+    const discount = extractDiscount(text);
+    if(discount !== null){
+      lastDiscountPercent = discount; // حفظ آخر نسبة خصم
+    }
+  }
 
-w.className = 'msg ' + (who === 'user' ? 'user' : 'bot');
+  if(isResult){
+    b.innerHTML = `<div class="result-title">🎉 مبروك! خصمك النهائي</div><div class="result-value">${safeText(text)}</div>`;
+  } else {
+    b.innerHTML = safeText(text);
+  }
 
-const b = document.createElement('div');
+  w.appendChild(b);
 
-b.className = isResult ? 'result-msg' : 'bubble';
-
-
-
-if(who === 'bot' && !isResult){
-
-const discount = extractDiscount(text);
-
-if(discount !== null){
-
-lastDiscountPercent = discount; // حفظ آخر نسبة خصم
-
+  if(!isResult){
+    const m = document.createElement('div');
+    m.className = 'meta';
+    const now = new Date();
+    const time = now.toLocaleTimeString('ar-EG', {hour:'2-digit', minute:'2-digit'});
+    m.textContent = time;
+    w.appendChild(m);
+  }
+  area.appendChild(w);
+  scrollToBottom();
 }
-
-}
-
-
-
-if(isResult){
-
-// يتم استخدام النص المرسل كنتيجة نهائية
-
-b.innerHTML = `<div class="result-title">🎉 مبروك! خصمك النهائي</div><div class="result-value">${safeText(text)}</div>`;
-
-} else {
-
-b.innerHTML = safeText(text);
-
-}
-
-
-
-w.appendChild(b);
-
-
-
-if(!isResult){
-
-const m = document.createElement('div');
-
-m.className = 'meta';
-
-const now = new Date();
-
-const time = now.toLocaleTimeString('ar-EG', {hour:'2-digit', minute:'2-digit'});
-
-m.textContent = time;
-
-w.appendChild(m);
-
-}
-
-area.appendChild(w);
-
-scrollToBottom();
-
-}
-
-
 
 function showTyping(){
-
-const el = document.createElement('div');
-
-el.className = 'msg bot';
-
-el.innerHTML = '<div class="bubble"><div class="typing" aria-hidden="true"><span></span><span></span><span></span></div></div>';
-
-area.appendChild(el);
-
-scrollToBottom();
-
-return el;
-
+  const el = document.createElement('div');
+  el.className = 'msg bot';
+  el.innerHTML = '<div class="bubble"><div class="typing" aria-hidden="true"><span></span><span></span><span></span></div></div>';
+  area.appendChild(el);
+  scrollToBottom();
+  return el;
 }
-
-
 
 function startTimer(){
-
-if(timerInterval || timerStarted) return;
-
-timerStarted = true;
-
-timeRemaining = 60;
-
-timerContainer.classList.add('active');
-
-timerDisplay.textContent = timeRemaining;
-
-timerInterval = setInterval(()=>{
-
-timeRemaining--;
-
-timerDisplay.textContent = timeRemaining;
-
-if(timeRemaining <= 0){
-
-stopTimer();
-
-finalize();
-
+  if(timerInterval || timerStarted) return;
+  timerStarted = true;
+  timeRemaining = 60;
+  timerContainer.classList.add('active');
+  timerDisplay.textContent = timeRemaining;
+  timerInterval = setInterval(()=>{
+    timeRemaining--;
+    timerDisplay.textContent = timeRemaining;
+    if(timeRemaining <= 0){
+      stopTimer();
+      finalize();
+    }
+  }, 1000);
 }
-
-}, 1000);
-
-}
-
-
 
 function stopTimer(){
-
-if(timerInterval){
-
-clearInterval(timerInterval);
-
-timerInterval = null;
-
+  if(timerInterval){
+    clearInterval(timerInterval);
+    timerInterval = null;
+  }
+  timerContainer.classList.remove('active');
 }
-
-timerContainer.classList.remove('active');
-
-}
-
-
 
 function finalize(){
+  if(finalized) return;
+  finalized = true;
+  stopTimer();
+  btn.disabled = true;
+  inp.disabled = true;
+  quick.style.display = 'none';
 
-if(finalized) return;
+  // نحاول نجيب آخر خصم من المتغير أولاً، ثم من التاريخ، ثم نستخدم 5% افتراضياً
+  let finalDiscount = null;
+  if(lastDiscountPercent !== null) finalDiscount = lastDiscountPercent;
+  else finalDiscount = findLastDiscountInHistory();
 
-finalized = true;
+  if(finalDiscount === null) finalDiscount = 5;
+  const finalDiscountText = `${finalDiscount}%`;
 
-stopTimer();
-
-btn.disabled = true;
-
-inp.disabled = true;
-
-quick.style.display = 'none';
-
-
-
-// يتم تحديد الخصم النهائي
-
-// إذا كان lastDiscountPercent يحمل قيمة، نستخدمها. وإلا، نستخدم 5 كقيمة افتراضية.
-
-const finalDiscount = lastDiscountPercent !== null ? lastDiscountPercent : 5;
-
-const finalDiscountText = `${finalDiscount}%`;
-
-
-
-setTimeout(()=>{
-
-append('bot', finalDiscountText, true); // عرض النتيجة النهائية
-
-setTimeout(()=>{
-
-append('bot', 'شكراً ليك! تم حفظ العرض وهنتواصل معاك قريب جداً 🎊');
-
-}, 1000);
-
-}, 500);
-
+  setTimeout(()=>{
+    append('bot', finalDiscountText, true); // عرض النتيجة النهائية
+    setTimeout(()=>{
+      append('bot', 'شكراً ليك! تم حفظ العرض وهنتواصل معاك قريب جداً 🎊');
+    }, 1000);
+  }, 500);
 }
-
-
 
 inp.addEventListener('focus', ()=>{
-
-setTimeout(()=>{
-
-const controls = document.querySelector('.controls');
-
-if(controls){
-
-controls.scrollIntoView({behavior:'smooth', block:'nearest'});
-
-}
-
-}, 300);
-
+  setTimeout(()=>{
+    const controls = document.querySelector('.controls');
+    if(controls){
+      controls.scrollIntoView({behavior:'smooth', block:'nearest'});
+    }
+  }, 300);
 });
-
-
 
 if(window.visualViewport){
-
-window.visualViewport.addEventListener('resize', ()=>{
-
-setTimeout(()=>{
-
-const controls = document.querySelector('.controls');
-
-if(controls){
-
-controls.scrollIntoView({behavior:'smooth', block:'end'});
-
+  window.visualViewport.addEventListener('resize', ()=>{
+    setTimeout(()=>{
+      const controls = document.querySelector('.controls');
+      if(controls){
+        controls.scrollIntoView({behavior:'smooth', block:'end'});
+      }
+    }, 100);
+  });
 }
-
-}, 100);
-
-});
-
-}
-
-
 
 function openChat(){
-
-overlay.classList.add('show');
-
-overlay.setAttribute('aria-hidden', 'false');
-
-openBtn.classList.add('hidden');
-
-if(!chatOpened){
-
-append('bot', 'أهلاً بيك في بوت كوكب! 🎉 قولّي إنت عايز تفاوض على إيه؟ 😎');
-
-chatOpened = true;
-
+  overlay.classList.add('show');
+  overlay.setAttribute('aria-hidden', 'false');
+  openBtn.classList.add('hidden');
+  if(!chatOpened){
+    append('bot', 'أهلاً بيك في بوت كوكب! 🎉 قولّي إنت عايز تفاوض على إيه؟ 😎');
+    chatOpened = true;
+  }
+  postToParent('chatOpened');
+  setTimeout(()=>{
+    scrollToBottom();
+    inp.focus(); // تركيز عند فتح الشات فقط
+  }, 400);
 }
-
-postToParent('chatOpened');
-
-setTimeout(()=>{
-
-scrollToBottom();
-
-inp.focus(); // تركيز عند فتح الشات فقط
-
-}, 400);
-
-}
-
-
 
 function closeChat(){
-
-overlay.classList.remove('show');
-
-overlay.setAttribute('aria-hidden', 'true');
-
-openBtn.classList.remove('hidden');
-
-postToParent('chatClosed');
-
-inp.blur();
-
-setTimeout(()=> openBtn.focus(), 200);
-
+  overlay.classList.remove('show');
+  overlay.setAttribute('aria-hidden', 'true');
+  openBtn.classList.remove('hidden');
+  postToParent('chatClosed');
+  inp.blur();
+  setTimeout(()=> openBtn.focus(), 200);
 }
-
-
 
 async function sendToWorker(payload){
-
-try{
-
-const res = await fetch(WORKER_URL, {
-
-method: 'POST',
-
-headers: {'Content-Type':'application/json'},
-
-body: JSON.stringify(payload),
-
-});
-
-return res;
-
-}catch(e){
-
-throw e;
-
+  try{
+    const res = await fetch(WORKER_URL, {
+      method: 'POST',
+      headers: {'Content-Type':'application/json'},
+      body: JSON.stringify(payload),
+    });
+    return res;
+  }catch(e){
+    throw e;
+  }
 }
-
-}
-
-
 
 async function sendMessage(isFinal = false){
+  const txt = inp.value.trim();
+  if(!txt || finalized) return;
+  // نضع رسالة المستخدم في الواجهة (يمكن إزالة هذا السطر لو ما بتحبش يظهر "تمام")
+  append('user', txt);
+  inp.value = '';
 
-const txt = inp.value.trim();
+  if(isFinal){
+    // لو المستخدم قرر إنه ينهي، ما نبعثش للسيرفر وننهي فوراً
+    finalize();
+    return;
+  }
 
-if(!txt || finalized) return;
+  const typing = showTyping();
+  btn.disabled = true;
+  inp.disabled = true;
 
-append('user', txt);
-
-inp.value = '';
-
-
-
-if(isFinal){
-
-finalize();
-
-return;
-
+  try{
+    const res = await sendToWorker({messages: historyMessages.concat([{role:'user', content: txt}])});
+    typing.remove();
+    if(!res || !res.ok){
+      append('bot', 'النت فاصل ولا في مشكلة في السيرفر 😅');
+    } else {
+      const j = await res.json().catch(()=> ({}));
+      const reply = j.text || j.reply || 'مش فاهمك قوي 😅 جرب تاني';
+      append('bot', reply);
+      historyMessages.push({role:'user', content: txt}, {role:'assistant', content: reply});
+      if(!timerStarted && historyMessages.length >= 2){
+        startTimer();
+      }
+    }
+  }catch(e){
+    try{ typing.remove(); }catch(_){}
+    append('bot', 'النت فاصل ولا إيه؟ 😅');
+  } finally {
+    btn.disabled = false;
+    inp.disabled = false;
+  }
 }
-
-
-
-const typing = showTyping();
-
-btn.disabled = true;
-
-inp.disabled = true;
-
-
-
-try{
-
-const res = await sendToWorker({messages: historyMessages.concat([{role:'user', content: txt}])});
-
-typing.remove();
-
-if(!res || !res.ok){
-
-append('bot', 'النت فاصل ولا في مشكلة في السيرفر 😅');
-
-} else {
-
-const j = await res.json().catch(()=> ({}));
-
-const reply = j.text || j.reply || 'مش فاهمك قوي 😅 جرب تاني';
-
-append('bot', reply);
-
-historyMessages.push({role:'user', content: txt}, {role:'assistant', content: reply});
-
-if(!timerStarted && historyMessages.length >= 2){
-
-startTimer();
-
-}
-
-}
-
-}catch(e){
-
-try{ typing.remove(); }catch(_){}
-
-append('bot', 'النت فاصل ولا إيه؟ 😅');
-
-} finally {
-
-btn.disabled = false;
-
-inp.disabled = false;
-
-// مـا فيش تركيز تلقائي هنا علشان متفتحش الكيبورد لما الرد يجيلك
-
-}
-
-}
-
-
 
 openBtn.addEventListener('click', openChat);
-
 closeBtn.addEventListener('click', closeChat);
-
 btn.addEventListener('click', ()=> sendMessage());
-
 inp.addEventListener('keydown', (e)=>{
-
-if(e.key === 'Enter') sendMessage();
-
+  if(e.key === 'Enter') sendMessage();
 });
-
-
 
 quick.addEventListener('click', (e)=>{
-
-if(e.target.tagName === 'BUTTON'){
-
-const text = e.target.dataset.text || '';
-
-const isFinal = e.target.dataset.finalize === 'true';
-
-inp.value = text;
-
-if(text){
-
-sendMessage(isFinal);
-
-}
-
-}
-
+  if(e.target.tagName === 'BUTTON'){
+    const text = e.target.dataset.text || '';
+    const isFinal = e.target.dataset.finalize === 'true';
+    inp.value = text;
+    if(text){
+      // لو زر "تمام" (finalize) نفضّل عدم ارسال المحتوى للسيرفر؛ فقط ننهي
+      sendMessage(isFinal);
+    }
+  }
 });
-
-
 
 window.addEventListener('message', (ev)=>{
-
-if(!ev.data || typeof ev.data.action !== 'string') return;
-
-if(ev.data.action === 'closeChat') closeChat();
-
-if(ev.data.action === 'focusInput'){
-
-if(overlay.classList.contains('show')) setTimeout(()=> inp.focus(), 200);
-
-}
-
+  if(!ev.data || typeof ev.data.action !== 'string') return;
+  if(ev.data.action === 'closeChat') closeChat();
+  if(ev.data.action === 'focusInput'){
+    if(overlay.classList.contains('show')) setTimeout(()=> inp.focus(), 200);
+  }
 });
-
-
 
 window.addEventListener('keydown', (e)=>{
-
-if(e.key === 'Escape' && overlay.classList.contains('show')) closeChat();
-
+  if(e.key === 'Escape' && overlay.classList.contains('show')) closeChat();
 });
 
-
-
 overlay.addEventListener('touchmove', (e)=>{
-
-if(e.target === overlay) e.preventDefault();
-
+  if(e.target === overlay) e.preventDefault();
 }, {passive:false});
 
-
-
 window.__KAWKAB_CHAT = {
-
-open: openChat,
-
-close: closeChat,
-
-sendMessageText: (t)=>{
-
-inp.value = t;
-
-sendMessage();
-
-}
-
+  open: openChat,
+  close: closeChat,
+  sendMessageText: (t)=>{
+    inp.value = t;
+    sendMessage();
+  }
 };
-
 })();
-
 </script>
+
 
 </body>
 
